--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*-----------------------------------------------------------
 
-	Theme Name: Adapt
+	Theme Name: Adapt and conquer
 	Theme URI: http://www.wpexplorer.com/
 	Description: Free responsive portfolio/blog theme
 	Author: WPExplorer
